# ck-doge

./: .gitignore  Cargo.toml  Makefile  README.md  dfx.json
.github/workflows/: publish.yml
examples/check-blocks/: Cargo.toml
examples/check-blocks/src/: main.rs
examples/send-tx/: Cargo.toml
examples/send-tx/src/: main.rs
src/ck-doge-canister/: Cargo.toml  README.md  ck-doge-canister.did
src/ck-doge-canister/src/: api_admin.rs  api_init.rs  api_query.rs  api_update.rs  ecdsa.rs  lib.rs  store.rs  syncing.rs
src/ck-doge-minter/: Cargo.toml  README.md  ck-doge-minter.did
src/ck-doge-minter/src/: api_init.rs  api_query.rs  api_update.rs  chain.rs  ecdsa.rs  job.rs  ledger.rs  lib.rs  store.rs  types.rs
src/ck-doge-types/: Cargo.toml  README.md
src/ck-doge-types/src/: amount.rs  block.rs  chainparams.rs  jsonrpc.rs  lib.rs  script.rs  sighash.rs  transaction.rs
src/ck-doge-types/src/canister/: agent.rs  ecdsa.rs  mod.rs
src/dogecoin/: Cargo.toml  README.md
src/dogecoin/src/: block.rs  chainparams.rs  jsonrpc.rs  lib.rs  opcodes.rs  script.rs  sighash.rs  transaction.rs
src/dogecoin/src/canister/: mod.rs
