[workspace]
members = [
  "src/ck-doge-canister",
  "src/ck-doge-minter",
  "src/ck-doge-types",
  "examples/check-blocks",
  "examples/send-tx",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/ldclabs/ck-doge"
keywords = ["defi", "dogecoin", "icp", "dapp", "web3"]
categories = ["blockchain", "web3"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytes = "1.6"
serde = "1"
serde_json = "1"
serde_bytes = "0.11"
ciborium = "0.2"
base64 = "0.21"
sha3 = "0.10"
bitcoin = { version = "0.32", default-features = false, features = [
  "std",
  "secp-lowmemory",
] }
hex = { package = "hex-conservative", version = "0.2", default-features = false, features = [
  "alloc",
] }
async-trait = "0.1"
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.8"
ic-stable-structures = "0.6"
num-traits = "0.2"
once_cell = "1.19"
lazy_static = "1.4"
