[workspace]
members = [
  "src/ck-doge-canister",
  "src/ck-doge-minter",
  "src/dogecoin",
  "examples/check-blocks",
  "examples/send-tx",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "0.5.5"
edition = "2021"
repository = "https://github.com/ldclabs/ck-doge"
keywords = ["defi", "dogecoin", "icp", "dapp", "web3"]
categories = ["encoding", "wasm", "data-structures"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytes = "1"
serde = "1"
serde_json = "1"
serde_bytes = "0.11"
ciborium = "0.2"
base64 = "0.22"
sha3 = "0.10"
bitcoin = { version = "0.32", default-features = false, features = [
  "std",
  "secp-lowmemory",
] }
hex = { package = "hex-conservative", version = "0.3", default-features = false, features = [
  "alloc",
] }
async-trait = "0.1"
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
num-traits = "0.2"
once_cell = "1.19"
lazy_static = "1.4"
