[package]
name = "check-blocks"
publish = false
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
ck-doge-types = { path = "../../src/ck-doge-types", version = "0.1" }
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
