[package]
name = "send-tx"
publish = false
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
dogecoin = { path = "../../src/dogecoin", version = "0.4" }
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
