[package]
name = "ck-doge-minter"
description = "The ckDOGE Minter canister converts DOGE to ckDOGE and back"
repository = "https://github.com/ldclabs/ck-doge/tree/main/src/ic-oss-minter"
publish = false

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
sha3 = { workspace = true }
ic-cdk = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
ck-doge-types = { path = "../ck-doge-types", version = "0.2" }
getrandom = { version = "0.2", features = ["custom"] }
