[package]
name = "ck-doge-types"
description = "Types for dogecoin chain data"
publish = true

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]

[features]
default = []
serde = []

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
sha3 = { workspace = true }
base64 = { workspace = true }
bitcoin-io = "0.1"
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic/", rev = "d19fa446ab35780b2c6d8b82ea32d808cca558d5" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic/", rev = "d19fa446ab35780b2c6d8b82ea32d808cca558d5" }

[dev-dependencies]
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
