[package]
name = "dogecoin"
description = "General purpose rust library for using and interoperating with Dogecoin."
publish = true

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]

[features]
default = []
serde = []

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
sha3 = { workspace = true }
base64 = { workspace = true }
bitcoin-io = "^0.1.3"

[dev-dependencies]
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
